# aftman

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md  RELEASE_TEMPLATE.md  aftman.toml
.github/workflows/: ci.yml  release.yml
src/: auth.rs  config.rs  dirs.rs  github.rs  home.rs  ident.rs  main.rs  manifest.rs  tool_alias.rs  tool_id.rs  tool_name.rs  tool_spec.rs  tool_storage.rs  trust.rs
src/cli/: mod.rs
src/process/: unix.rs  windows.rs
src/system_path/: env.sh  mod.rs  shell.rs  unix.rs  unsupported.rs  windows.rs
src/tool_source/: github.rs  mod.rs
test-util/: Cargo.toml
test-util/src/: dirsert.rs  environment.rs  lib.rs
tests/: ui.rs
tests/snapshots/: ui__self-install stderr.snap  ui__self-install stdout.snap
