[package]
name = "aftman"
description = "Aftman, the prodigal sequel to Foreman"
license = "MIT"
version = "0.1.0"
edition = "2018"
repository = "https://github.com/LPGhatguy/aftman"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.43"
atty = "0.2.14"
dialoguer = "0.9.0"
dirs = "3.0.2"
env_logger = "0.9.0"
fs-err = "2.6.0"
log = "0.4.14"
once_cell = "1.9.0"
reqwest = { version = "0.11.4", features = ["blocking"] }
semver = { version = "1.0.4", features = ["serde"] }
serde = { version = "1.0.129", features = ["derive"] }
serde_json = "1.0.67"
structopt = "0.3.22"
toml = "0.5.8"
zip = "0.5.13"

[dev-dependencies]
serde_json = "1.0.66"
