[package]
name = "aftman"
description = "Aftman is a command line toolchain manager"
version = "0.2.0"
license = "MIT"
edition = "2021"
repository = "https://github.com/LPGhatguy/aftman"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.43"
atty = "0.2.14"
command-group = "1.0.8"
dialoguer = "0.9.0"
dirs = "3.0.2"
env_logger = "0.9.0"
fs-err = "2.6.0"
log = "0.4.14"
once_cell = "1.9.0"
reqwest = { version = "0.11.4", features = ["blocking"] }
semver = { version = "1.0.4", features = ["serde"] }
serde = { version = "1.0.129", features = ["derive"] }
serde_json = "1.0.67"
structopt = "0.3.22"
toml = "0.5.8"
toml_edit = "0.14.4"
zip = "0.5.13"

[target.'cfg(target_os = "windows")'.dependencies]
winreg = "0.10.1"

[dev-dependencies]
serde_json = "1.0.66"
